--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -1,23 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Database"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import pandas as pd\n",
     "import psycopg2 as pg\n",
-    "from sqlalchemy import create_engine\n",
-    "engine = create_engine('postgresql://postgres:postgres@localhost:5432/taxi_trip')"
+    "from sqlalchemy import create_engine, inspect\n",
+    "engine = create_engine('postgresql://postgres:postgres@localhost:5432/taxi_trip')\n",
+    "inspector = inspect(engine)"
    ]
   },
   {
@@ -181,6 +175,208 @@
    "source": [
     "df_zones = pd.read_csv('../data/taxi+_zone_lookup.csv')\n",
     "df_zones.to_sql(name='zones', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['yellow_trip', 'zones']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'index',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'VendorID',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'tpep_pickup_datetime',\n",
+       "  'type': TIMESTAMP(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'tpep_dropoff_datetime',\n",
+       "  'type': TIMESTAMP(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'passenger_count',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'trip_distance',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'RatecodeID',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'store_and_fwd_flag',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'PULocationID',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'DOLocationID',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'payment_type',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'fare_amount',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'extra',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'mta_tax',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'tip_amount',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'tolls_amount',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'improvement_surcharge',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'total_amount',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'congestion_surcharge',\n",
+       "  'type': DOUBLE_PRECISION(precision=53),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector.get_columns('yellow_trip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'index',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'LocationID',\n",
+       "  'type': BIGINT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'Borough',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'Zone',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None},\n",
+       " {'name': 'service_zone',\n",
+       "  'type': TEXT(),\n",
+       "  'nullable': True,\n",
+       "  'default': None,\n",
+       "  'autoincrement': False,\n",
+       "  'comment': None}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inspector.get_columns('zones')"
    ]
   },
   {
